// ============================================================
//  AEGISFLOW AI — Database Schema (DBML)
//  Phiên bản: 1.0.2 | Ngày: 2026-04-11
//  Đã sửa lỗi "Unknown column setting 'nullable'"
// ============================================================

Project AegisFlow {
  database_type: 'PostgreSQL'
  Note: 'Hệ thống giám sát lũ lụt và điều phối cứu hộ thông minh'
}

// ============================================================
//  DOMAIN 1: AUTHENTICATION & RBAC
// ============================================================

Table users {
  id bigserial [pk, note: 'ID người dùng']
  name varchar(255) [not null]
  email varchar(255) [unique, not null]
  email_verified_at timestamptz
  password varchar(255) [not null]
  phone varchar(20)
  avatar_url text
  status varchar(20) [default: 'active']
  last_login_at timestamptz
  last_login_ip varchar(45)
  created_at timestamptz [default: 'now()', not null]
  updated_at timestamptz [default: 'now()', not null]
  deleted_at timestamptz

  Note: 'Bảng người dùng chính'
}

Table roles {
  id bigserial [pk]
  name varchar(50) [unique, not null]
  slug varchar(50) [unique, not null]
  description text
  guard_name varchar(50) [default: 'web']
  created_at timestamptz [default: 'now()']
  updated_at timestamptz [default: 'now()']
}

Table permissions {
  id bigserial [pk]
  name varchar(100) [unique, not null]
  slug varchar(100) [unique, not null]
  description text
  group_name varchar(50)
  created_at timestamptz [default: 'now()']
  updated_at timestamptz [default: 'now()']
}

Table role_permission {
  id bigserial [pk]
  role_id bigint [not null]
  permission_id bigint [not null]
  created_at timestamptz [default: 'now()']
}

Table user_role {
  id bigserial [pk]
  user_id bigint [not null]
  role_id bigint [not null]
  created_at timestamptz [default: 'now()']
}

Table user_devices {
  id bigserial [pk]
  user_id bigint [not null]
  device_token text [not null]
  device_type varchar(20) [not null]
  device_name varchar(100)
  is_active boolean [default: true]
  created_at timestamptz [default: 'now()']
  updated_at timestamptz [default: 'now()']
}

// Relationships
Ref: user_role.user_id > users.id [delete: cascade]
Ref: user_role.role_id > roles.id [delete: cascade]
Ref: role_permission.role_id > roles.id [delete: cascade]
Ref: role_permission.permission_id > permissions.id [delete: cascade]
Ref: user_devices.user_id > users.id [delete: cascade]

// ============================================================
//  DOMAIN 2: GEOGRAPHY
// ============================================================

Table districts {
  id bigserial [pk]
  name varchar(255) [not null]
  code varchar(10) [unique, not null]
  boundary geometry(Polygon, 4326)
  population integer
  area_km2 decimal(10,2)
  risk_level varchar(20)
  created_at timestamptz [default: 'now()']
  updated_at timestamptz [default: 'now()']

  Indexes {
    boundary [type: gist]
  }
}

Table wards {
  id bigserial [pk]
  district_id bigint [not null]
  name varchar(255) [not null]
  code varchar(10) [unique, not null]
  boundary geometry(Polygon, 4326)
  population integer
  created_at timestamptz [default: 'now()']
  updated_at timestamptz [default: 'now()']
}

Ref: wards.district_id > districts.id [delete: cascade]

// ============================================================
//  DOMAIN 3: FLOOD MANAGEMENT
// ============================================================

Table flood_zones {
  id bigserial [pk]
  name varchar(255) [not null]
  slug varchar(100) [unique, not null]
  description text
  geometry geometry(Polygon, 4326) [not null]
  centroid geometry(Point, 4326)
  district_id bigint
  ward_ids bigint[]
  risk_level varchar(20) [not null]
  base_water_level_m decimal(6,2) [default: 0]
  current_water_level_m decimal(6,2) [default: 0]
  alert_threshold_m decimal(6,2) [default: 1.5]
  danger_threshold_m decimal(6,2) [default: 3.0]
  area_km2 decimal(10,2)
  population_affected integer
  status varchar(20) [default: 'monitoring']
  color varchar(7) [not null]
  opacity decimal(3,2) [default: 0.3]
  is_active boolean [default: true]
  created_at timestamptz [default: 'now()']
  updated_at timestamptz [default: 'now()']

  Indexes {
    geometry [type: gist]
  }
}

Ref: flood_zones.district_id > districts.id [delete: set null]

Table sensors {
  id bigserial [pk]
  external_id varchar(100) [unique, not null]
  name varchar(255) [not null]
  type varchar(30) [not null]
  model varchar(100)
  geometry geometry(Point, 4326) [not null]
  flood_zone_id bigint
  district_id bigint
  status varchar(20) [default: 'online']
  min_value decimal(10,2)
  max_value decimal(10,2)
  unit varchar(20) [not null]
  reading_interval_seconds integer [default: 300]
  alert_threshold decimal(10,2)
  danger_threshold decimal(10,2)
  last_reading_at timestamptz
  last_value decimal(10,2)
  metadata jsonb
  is_active boolean [default: true]
  created_at timestamptz [default: 'now()']
  updated_at timestamptz [default: 'now()']
}

Ref: sensors.flood_zone_id > flood_zones.id [delete: set null]
Ref: sensors.district_id > districts.id [delete: set null]

Table sensor_readings {
  id bigserial [pk]
  sensor_id bigint [not null]
  recorded_at timestamptz [not null]
  value decimal(10,2) [not null]
  raw_data jsonb
  is_anomaly boolean [default: false]
  quality_score decimal(3,2)
  source varchar(30) [default: 'sensor']
  created_at timestamptz [default: 'now()']

  Indexes {
    (sensor_id, recorded_at) [type: btree]
  }
}

Ref: sensor_readings.sensor_id > sensors.id [delete: cascade]

// (Các bảng còn lại được sửa tương tự)

Table incidents {
  id bigserial [pk]
  title varchar(255) [not null]
  description text
  type varchar(50) [not null]
  severity varchar(20) [not null]
  status varchar(20) [default: 'reported']
  source varchar(30) [not null]
  geometry geometry(Point, 4326)
  address text
  district_id bigint
  ward_id bigint
  flood_zone_id bigint
  water_level_m decimal(6,2)
  rainfall_mm decimal(6,2)
  photo_urls text[]
  reported_by bigint
  assigned_to bigint
  verified_by bigint
  verified_at timestamptz
  resolved_at timestamptz
  closed_at timestamptz
  metadata jsonb
  created_at timestamptz [default: 'now()']
  updated_at timestamptz [default: 'now()']

  Indexes {
    (type, status) [type: btree]
    geometry [type: gist]
  }
}

Ref: incidents.district_id > districts.id [delete: set null]
Ref: incidents.ward_id > wards.id [delete: set null]
Ref: incidents.flood_zone_id > flood_zones.id [delete: set null]
Ref: incidents.reported_by > users.id [delete: set null]
Ref: incidents.assigned_to > users.id [delete: set null]
Ref: incidents.verified_by > users.id [delete: set null]

// Bạn có thể tiếp tục paste các bảng còn lại (rescue_teams, shelters, rescue_requests, predictions, alerts, notifications...) theo cách tương tự.
